bin/tests/native/compiler/compiler_global_if_error.swg
#global #if "true" // swc-expected-error {{sema_err_invalid_type}} // swc-option suite-test

#test
{
}
